<resources>
    <string name="app_name">Mis Lugares</string>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de</string>
    <string name="accion_salir">Salir</string>
    <string name="accion_buscar">Buscar</string>
    <string name="action_settings">Opciones</string>
    <string name="ok">OK</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="compartir">Compartir</string>
    <string name="como_llegar">Cómo llegar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="acerca_de">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="form_nombre">Nombre:</string>
    <string name="form_nombre_hint">Algo que identifique al lugar</string>
    <string name="form_tipo">Tipo:</string>
    <string name="form_direccion">Dirección:</string>
    <string name="form_direccion_hint">Dirección del lugar</string>
    <string name="form_telefono">Teléfono:</string>
    <string name="form_telefono_hint">Número de teléfono</string>
    <string name="form_url">URL:</string>
    <string name="form_url_hint">Página web</string>
    <string name="form_comentario">Comentario:</string>
    <string name="form_comentario_hint">Introduce tus notas</string>
    <string name="preferencias_notificaciones_title">Mandar notificaciones</string>
    <string name="preferencias_notificaciones_summary">Notificar si estamos cerca de un lugar</string>
    <string name="preferencias_distancia_title">Distancia para notificar</string>
    <string name="preferencias_distancia_summary">Distancia mínima (km) para notificar</string>
    <string name="preferencias_criterio_title">Criterio de ordenación</string>
    <string name="preferencias_criterio_summary">Qué lugares quieres que aparezcan antes</string>
    <string name="preferencias_criterio_alfabetico">Alfabético</string>
    <string name="preferencias_criterio_fecha">Fecha</string>
    <string name="preferencias_criterio_tipo">Tipo</string>
    <string name="preferencias_categoria_correos">Notificaciones por correo</string>
    <string name="preferencias_correos_title">Recibir correos</string>
    <string name="preferencias_correos_summary">Recibir correos con información sobre lugares</string>
    <string name="preferencias_direccion_correo_title">Dirección de correo</string>
    <string name="preferencias_direccion_correo_summary">Cuenta donde se mandarán las notificaciones</string>
    <string name="preferencias_tipo_correos_title">Tipos de notificaciones</string>
    <string name="preferencias_tipo_correos_summary">Qué tipos de correos quieres recibir</string>
    <string name="logo_tipo">Logo del tipo</string>
    <string name="logo_direccion">Logo de la dirección</string>
    <string name="logo_telefono">Logo del teléfono</string>
    <string name="logo_url">Logo de la URL</string>
    <string name="logo_comentario">Logo del comentario</string>
    <string name="logo_fecha">Logo de la fecha</string>
    <string name="logo_hora">Logo de la hora</string>
    <string name="foto_lugar">Foto del lugar</string>
    <string name="logo_galeria">Logo de la galería</string>
    <string name="logo_camara">Logo de la cámara</string>
    <string name="seleccion_lugar">Selección del lugar</string>
    <string name="seleccion_lugar_mensaje">Introduzca su ID:</string>
    <string name="borrado_lugar">Borrado del lugar</string>
    <string name="borrado_lugar_mensaje">¿Estás seguro que quieres eliminar este lugar?</string>
</resources>
