<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="notificaciones"
        android:title="@string/preferencias_notificaciones_title"
        android:summary="@string/preferencias_notificaciones_summary" />
    <EditTextPreference
        android:key="distancia"
        android:title="@string/preferencias_distancia_title"
        android:summary="@string/preferencias_distancia_summary"
        android:defaultValue="3"/>
    <ListPreference
        android:key="criterio"
        android:title="@string/preferencias_criterio_title"
        android:summary="@string/preferencias_criterio_summary"
        android:entries="@array/tiposOrden"
        android:entryValues="@array/tiposOrdenValores"/>
    <PreferenceCategory
        android:title="@string/preferencias_categoria_correos">
        <CheckBoxPreference
            android:key="correos"
            android:title="@string/preferencias_correos_title"
            android:summary="@string/preferencias_correos_summary"/>
        <EditTextPreference
            android:key="direccionCorreo"
            android:title="@string/preferencias_direccion_correo_title"
            android:summary="@string/preferencias_direccion_correo_summary"/>
    </PreferenceCategory>
</PreferenceScreen>