<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="5"
        app:showAsAction="never"/>
    <item
        android:title="@string/accion_acerca_de"
        android:id="@+id/acercaDe"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:title="@string/accion_buscar"
        android:id="@+id/menu_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="115"
        app:showAsAction="always|collapseActionView"/>
    <item android:title="Mapa"
        android:id="@+id/menu_mapa"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="100"
        app:showAsAction="always"/>
</menu>