<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="Nombre del lugar"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/logo_tipo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_tipo"
                android:src="@drawable/otros" />
            <TextView
                android:id="@+id/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="tipo del lugar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="verMapa" >
            <ImageView
                android:id="@+id/logo_direccion"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_direccion"
                android:src="@android:drawable/ic_menu_myplaces" />
            <TextView
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="dirección del lugar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="llamadaTelefono">
            <ImageView
                android:id="@+id/logo_telefono"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_telefono"
                android:src="@android:drawable/ic_menu_call" />
            <TextView
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="teléfono del lugar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="pgWeb">
            <ImageView
                android:id="@+id/logo_url"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_url"
                android:src="@android:drawable/ic_menu_mapmode" />
            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="url del lugar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/logo_comentario"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_comentario"
                android:src="@android:drawable/ic_menu_info_details" />
            <TextView
                android:id="@+id/comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="comentario del lugar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/logo_fecha"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_fecha"
                android:src="@android:drawable/ic_menu_my_calendar" />
            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="fecha" />
            <ImageView
                android:id="@+id/logo_hora"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/logo_hora"
                android:src="@android:drawable/ic_menu_recent_history" />
            <TextView
                android:id="@+id/hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="fecha" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/valoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@+id/foto"
            android:rating="3" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/foto_lugar"
                android:src="@drawable/foto_epsg" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/logo_camara"
                    android:src="@android:drawable/ic_menu_camera" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/logo_galeria"
                    android:src="@android:drawable/ic_menu_gallery" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>